@startuml er

    hide circle
    skinparam minClassWidth 170

    Entity User{
        id: Number
        ---
        name: Text
        characters: Number<FK>
    }

    Entity UserCharacter{
        id: Number
        ---
        user: Number <FK>
        character: Number <FK>
    }

   Entity Character{
       id: Number
       ---
       name: Text
       characterClass: Text
       healthPoints: Number
       maximumHP: Number
       energyPoints: Number
       experiencePoints: Number
       coins: Number
       habits: Habit[]
       dailies: Daily[]
       toDos: Todo[]
       quests: Quest[]
       inventory: Item[]
       abilities: Number <FK>
       buffs: Text[]
   }

    Entity Ability{
        id: Number
        ---
        name: Text
        characterClass: Text
        description: Text
        energyRequired: Number
        levelRequired: Number
    }

    Entity CharacterAbility{
        id: Number
        ---
        character_id: Number <FK>
        ability_id: Number <FK>
    }

    Entity Challenge{
        name: Text
        ---
        description: Text
        reward: Reward
    }

    Entity Task{
        name: Text
        ---
        character_id: Number <FK>
        description: Text
        difficulty: Number
        type: Text
        deadline: Date?
        startDate: Date?
        completionCount: Number?
        reward: Reward
    }

    Entity Item{
        id: Number
        ---
        name: Text
        quantity: Number
        description: Text
        price: Number
    }

    Entity CharacterItem{
        id: Number
        ---
        character_id: Number <FK>
        item_id: Number <FK>
    }

    Entity Shop{
        id: Number
        ---
        item_id: Number <FK>
    }

    entity Buff{
        name: Text
        ---
        duration: Date
        character_id: Number <FK>
    }

User ||--|{ UserCharacter
UserCharacter ||--|{ Character
Character ||--o{ CharacterAbility
CharacterAbility }o--|| Ability
Item }o--|| Challenge
Character ||--o{ Task
Task ||--o{ Item
Shop |o--|| Item
CharacterItem }o--|| Character
CharacterItem }o--|| Item
Character ||--o{ Buff

@enduml